--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="setting">设置</string>
 
     <string name="transfer">转账</string>
-    <string name="receive_account">接受账户</string>
+    <string name="receive_account">To</string>
     <string name="receive_account_hint">请输入接收账户地址</string>
     <string name="close">关闭</string>
     <string name="token">通证</string>
@@ -107,10 +107,10 @@
     <string name="send_address">From</string>
     <string name="receive_address">To</string>
     <string name="consume_gas">Gas Fee</string>
-    <string name="max_gas">Maximum Charge\n %s</string>
+    <string name="max_gas">Maximum Charge</string>
     <string name="total_consume">Total Amount</string>
     <string name="amount_gas">Amount + Gas Fee</string>
-    <string name="max_consume">Maximum Amount\n %s</string>
+    <string name="max_consume">Maximum Amount</string>
     <string name="confirm">Confirm the transaction</string>
 
     <string name="look_in_etherscan">Etherscan查看</string>
@@ -227,4 +227,10 @@
     <string name="go_to_contact">去添加好友</string>
 
     <string name="info_copied">信息已复制</string>
+
+    <string name="current_account">Current account</string>
+    <string name="recommoned_site">推荐站点</string>
+    <string name="may_less_30">有可能&lt;30秒</string>
+    <string name="confirm_and_broadcast">Confirm the transaction</string>
+
 </resources>
