--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -232,4 +232,7 @@
     <string name="recommoned_site">推荐站点</string>
     <string name="may_less_30">有可能&lt;30秒</string>
     <string name="confirm_and_broadcast">确认交易并广播</string>
+
+    <string name="total_asset">资产总值：</string>
+    <string name="invite_friend">邀请好友</string>
 </resources>
