--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,4 +233,6 @@
     <string name="may_less_30">有可能&lt;30秒</string>
     <string name="confirm_and_broadcast">Confirm the transaction</string>
 
+    <string name="total_asset">Total Assets：</string>
+    <string name="invite_friend">邀请好友</string>
 </resources>
